WindGroup Dev/src/objects/Translations__c.object
<CustomObject>
    <description>Translations Object for the maintenance of all Labels against different Languages</description>
    <fields>
        <fullName>Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Item</label>
        <referenceTo>Checklist_Item__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Master_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Master Item</label>
        <referenceTo>Checklist_Master_Item__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Checklist_Labels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Master</label>
        <referenceTo>Checklist_Master__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Label_Description__c</fullName>
        <label>Label Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Label__c</fullName>
        <label>Short Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Translation</label>
    <nameField>
        <displayFormat>TL-{0000000000}</displayFormat>
        <label>Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>